noinst_PROGRAMS=\
	log_test\
	hash_test\
	rbt_test\
	list_test\
	gc_test

log_test_SOURCES=log_test.c
log_test_LDADD=../src/libming.la

hash_test_SOURCES=hash_test.c
hash_test_LDADD=../src/libming.la

rbt_test_SOURCES=rbt_test.c
rbt_test_LDADD=../src/libming.la

list_test_SOURCES=list_test.c
list_test_LDADD=../src/libming.la

gc_test_SOURCES=gc_test.c
gc_test_LDADD=../src/libming.la
